1.13
-------
- Add detection report
- Add sandbox command line arguments option for analyses

1.12
-------
- Add file analysis by download url

1.11.3
-------
- Get EDR alert assessments by edr alert ids

1.11.2
-------
- Add action taken emoji

1.11.1
-------
- Add option to add suffix to user agent

1.11
-------
- Add indicators to SubAnalysis

1.10
-------
- Add endpoint analysis
- Support getting analysis by analysis id while in progress

1.9.2
-------
- Allow passing file-like object to download file
- When providing to download file a directory, the file name is taken from the response

1.9.1
-------
- Optional latest family search on get analysis metadata

1.9.0
-------
- Rename exception to have Error suffix
- Add `SubAnalysis.from_analysis_id` to properly initialize SubAnalysis without the composed analysis
- Fix URL analysis additional parameters propagation
- Add File analysis summary metadata function

1.8.3
-------
- add extraction info to sub analysis

1.8.1
-------
- Add space in note title

1.8.0
-------
- Add on-premise compatability
- Deprecate `get_analysis_by_id` in favor of `Analysis.from_analysis_id`


1.7.0
-------
- Add UrlAnalysis
- `Analysis` was renamed to `FileAnalysis`
- Drop support for python 3.5, add support for python 3.10

1.6.4 - 1.6.10
-------
- Analysis summary utility improvements

1.6.3
-------
- Fix: analysis summary didn't handle no code reuse report

1.6.2
-------
- Fix: analysis summary didn't look for genes in root analysis


1.6.1
-------
- Fix: Handle no iocs correctly

1.6
------
- Add analysis summary utility function
- Handle no ttps correctly

1.5
------
- Add family search
- Support for zip password
- Add iocs and dynamic ttps to analysis
- Add capabilities to sub analysis

1.4.5.2
------
- Fixes for get_analysis_by_id function

1.4.5
------
- Add a timeout option when waiting for operation completion

1.4
------
- Add support for strings api calls

1.3
------