@@ -1,10 +1,14 @@
-from enum import Enum
-from enum import IntEnum
+import enum
 
 from intezer_sdk import __version__
 
 
-class AnalysisStatusCode(Enum):
+class AutoName(enum.Enum):
+    def _generate_next_value_(name, start, count, last_values):
+        return name.lower()
+
+
+class AnalysisStatusCode(enum.Enum):
     CREATED = 'created'
     IN_PROGRESS = 'in_progress'
     QUEUED = 'queued'
@@ -13,15 +17,50 @@ class AnalysisStatusCode(Enum):
     FINISHED = 'finished'
 
 
-class IndexStatusCode(Enum):
+class SoftwareType(AutoName):
+    ADMINISTRATION_TOOL = enum.auto()
+    APPLICATION = enum.auto()
+    INSTALLER = enum.auto()
+    LIBRARY = enum.auto()
+    PACKER = enum.auto()
+    MALWARE = enum.auto()
+    INTERPRETER = enum.auto()
+    MALICIOUS_PACKER = enum.auto()
+
+
+class FileAnalysisVerdict(AutoName):
+    TRUSTED = enum.auto()
+    MALICIOUS = enum.auto()
+    SUSPICIOUS = enum.auto()
+    NEUTRAL = enum.auto()
+    UNKNOWN = enum.auto()
+    NOT_SUPPORTED = enum.auto()
+    NO_THREATS = enum.auto()
+
+
+class EndpointAnalysisVerdict(AutoName):
+    NO_THREATS = enum.auto()
+    MALICIOUS = enum.auto()
+    SUSPICIOUS = enum.auto()
+    INCOMPLETE = enum.auto()
+
+
+class URLAnalysisVerdict(AutoName):
+    NO_THREATS = enum.auto()
+    SUSPICIOUS = enum.auto()
+    MALICIOUS = enum.auto()
+
+
+class IndexStatusCode(enum.Enum):
     CREATED = 'created'
     IN_PROGRESS = 'in_progress'
     FINISH = 'finished'
+    FINISHED = 'finished'
 
 
-class IndexType(Enum):
-    TRUSTED = 'trusted'
-    MALICIOUS = 'malicious'
+class IndexType(AutoName):
+    TRUSTED = enum.auto()
+    MALICIOUS = enum.auto()
 
     @staticmethod
     def from_str(label):
@@ -33,12 +72,12 @@ class IndexType(Enum):
             raise NotImplementedError
 
 
-class CodeItemType(Enum):
-    FILE = 'file'
-    MEMORY_MODULE = 'memory_module'
+class CodeItemType(AutoName):
+    FILE = enum.auto()
+    MEMORY_MODULE = enum.auto()
 
 
-class OnPremiseVersion(IntEnum):
+class OnPremiseVersion(enum.IntEnum):
     V21_11 = 21.11
 
 
